# data-mingler-rust

./: Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/dvmql/: datasources.rs  helpers.rs  mod.rs  query.rs
src/dvmql/query/: deserialization.rs  mod.rs  tree.rs
src/load/: edges.rs  mod.rs
src/query/: example_query.xml  mod.rs
src/transform/: aggregate.rs  mod.rs
test_data/: example_csv.csv  example_datasources.xml  example_dvm.xml  example_query.xml  example_xml.xml
tests/: load_dvm_test.rs
