[package]
name = "data-mingler-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
quick-xml = { version = "0.31.0", features = ["serialize"] }
clap = { version = "4.4.12", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }
neo4rs = "0.7.1"
tokio = { version = "1.35.1", features = ["full"] }
async-recursion = "1.0.5"
tokio-postgres = "0.7.10"
log = "0.4.20"
env_logger = "0.10.2"
