[package]
name = "data-mingler-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
quick-xml = { version = "0.35.0", features = ["serialize", "async-tokio"] }
clap = { version = "4.4.12", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
strum = { version = "0.26.1", features = ["derive"] }
neo4rs = "0.7.1"
tokio = { version = "1.35.1", features = ["full"] }
async-recursion = "1.0.5"
csv-async = { version = "1.2.6", features = ["tokio"] }
tokio-stream = "0.1.14"
async-stream = "0.3.5"
futures-util = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
